...
    <string name="communities_link">Communities Link</string>
    <string name="home_activity">Home</string>
    <string name="title_activity_communities">Communities</string>
    <string name="product_detail_activity">Product Details</string>

    <!-- Feed Activity Tabs -->
    <string name="my_feed_tab">My Feed</string>
    <string name="trending_tab">Trending</string>
    <string name="my_location_tab">My Location</string>

    <!-- Feed Activity related Fragments text -->
    <string name="feed_fragment">Feed Fragment</string>
    <string name="feed_nfl_link_text">Top NFL Fan Products for 2016</string>
    <string name="trending_fragment">Trending Fragment</string>
    <string name="trending_text">These are the latest trending products&#8230;</string>
    <string name="my_location_fragment">My Location Fragment</string>
    <string name="my_location_text">You current location is Sligo, Ireland</string>

    <string name="title_brand_activity">Brand</string>
    <string name="top_category_title">Top Categories</string>
    <string name="top_category_link"><u>Shop All</u></string>

...
    <string name="new_arrivals_label">New Arrivals</string>
    <string name="top_nfl_prod_label">Top NFL Fan Products for 2016</string>
    <string name="nfl_dot_com_label">NFL.com</string>
    <string name="raider_jersey_label">Raiders Jersey</string>
    <string name="raider_jersey_price_label">$65</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <!--<string name="product_img_base_url">http://ak1.ostkcdn.com/images/products/</string>-->
    <string name="ostk_base_rest_url">http://www.overstock.com/api/</string>
    <string name="similar_producst_labels">Similar Products</string>
    <string name="webview_html_encoding">text/html; charset=UTF-8</string>

...
