...
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:animateLayoutChanges="true"
        />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_feed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    </android.support.v7.widget.RecyclerView>
...
